<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 lizhaotailang
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/basic_settings">

        <android.support.v7.preference.CheckBoxPreference
            android:title="@string/no_picture_mode"
            android:key="no_picture_mode"
            android:defaultValue="false"
            android:summary="@string/no_picture_mode_description" />

        <android.support.v7.preference.CheckBoxPreference
            android:title="@string/in_app_browser"
            android:key="in_app_browser"
            android:defaultValue="true"
            android:summary="@string/in_app_browser_description" />

        <android.support.v7.preference.ListPreference
            android:title="@string/time_of_saving_articles"
            android:key="time_of_saving_articles"
            android:entries="@array/time_to_save_opts"
            android:entryValues="@array/time_to_save_values"
            android:defaultValue="7"/>

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/other_settings">

        <android.support.v7.preference.Preference
            android:title="@string/clear_image_cache"
            android:key="clear_glide_cache"/>

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>